--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,25 @@
 extends layout
 
 block content
- div(display='inline-block')
-  h1 Cyrus Ke Zhang
-  img(src="images/profile.jpg")
+	nav.navbar.navbar-fixed-top
+		
+	img.centered(src="images/profile.jpg")
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+block scripts
+	script(src='vendor/freelancer/js/jquery-1.11.0.js')
+	script(src='vendor/bootstrap/js/bootstrap.min.js')
