--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,15 @@
 extends layout
 
 block content
-	nav.navbar.navbar-fixed-top
-		
+	nav.navbar.navbar-fixed-top.row
+		.im-centered
+			.center-content
+				a.col-md-2 idk1
+				a.col-md-2 idk2
+				a.col-md-2 idk3
+				a.col-md-2 idk4
+				a.col-md-2 idk5
+				a.col-md-2 idk6
 	img.centered(src="images/profile.jpg")
 
 
