--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -9,15 +9,23 @@ body {
   text-align: center;
   color: white;
 }*/
-
-.navbar-nav li a {
-  padding-top: 5px !important;
-  padding-bottom: 5px !important;
-}
 .navbar {
   background-color: rgba(0,0,0,0.6);
-  min-height: 50px !important;   
-
+  min-height: 50px;   
+  padding-top: 15px;
+  padding-bottom: 10px;
+  width: 100%;
+}
+nav a {
+  color: white;
+  font-size: 15px;
+}
+.im-centered {
+  text-align: center;
+  margin: auto;
+  max-width: 100%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 img {
   position: fixed;
