--- a/views/index.jade
+++ b/views/index.jade
@@ -1,31 +1,21 @@
 extends layout
 
 block content
-	nav.navbar.navbar-fixed-top.row
+	nav.navbar.navbar-fixed-top
 		.im-centered
-			.center-content
-				a.col-md-2 idk1
-				a.col-md-2 idk2
-				a.col-md-2 idk3
-				a.col-md-2 idk4
-				a.col-md-2 idk5
-				a.col-md-2 idk6
-	img.centered(src="images/profile.jpg")
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+			a.col-md-2 idk1
+			a.col-md-2 idk2
+			a.col-md-2 idk3
+			a.col-md-2 idk4
+			a.col-md-2 idk5
+			a.col-md-2 idk6
+	img(src="images/profile.jpg")
+	hr
+	.center-block
+		h1.fancy 
+			span ABOUT ME
+			.description
+				p Ke is a passionate software developer who is fueled by the idea of designing and creating.			
 
 block scripts
 	script(src='vendor/freelancer/js/jquery-1.11.0.js')
