--- a/views/index.jade
+++ b/views/index.jade
@@ -9,14 +9,40 @@ block content
 			a.col-md-2 idk4
 			a.col-md-2 idk5
 			a.col-md-2 idk6
-	img(src="images/profile.jpg")
+	.container.profile-pic
+		.row
+			.col-lg-12
+				img(src="images/profile.jpg")
 	hr
 	.center-block
 		h1.fancy 
 			span ABOUT ME
 			.description
 				p Ke is a passionate software developer who is fueled by the idea of designing and creating.			
-
+	
+	.carousel.slide(data-ride="carousel" id="carousel-example-generic")
+		ol.carousel-indicators
+			li.active(data-target="#carousel-example-generic" data-slide-to="0")
+			li(data-target="#carousel-example-generic" data-slide-to="1")
+			li(data-target="#carousel-example-generic" data-slide-to="2")
+		.carousel-inner(role="listbox")
+			.item.active
+				img(src="images/test2.jpg")
+				.carousel-caption ...
+			.item
+				img(src="images/test2.jpg")
+				.carousel-caption ...
+			.item
+				img(src="images/test2.jpg")
+				.carousel-caption ...
+		a.left.carousel-control(href="#carousel-example-generic" role="button" data-slide="prev")
+			span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+			span.sr-only Previous
+		a.right.carousel-control(href="#carousel-example-generic" role="button" data-slide="next")
+			span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+			span.sr-only Next
+	.foot
+		p helhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhel				
 block scripts
 	script(src='vendor/freelancer/js/jquery-1.11.0.js')
 	script(src='vendor/bootstrap/js/bootstrap.min.js')
