ready to add angularjs in..

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,66 +18,76 @@ block content
 		.row
 			.col-lg-12
 				img(src="images/profile.jpg")
+			.col-md-8
+			.col-md-4
+				a.btn.btn-social.btn-lg.btn-facebook.icon-customize
+					i.fa.fa-facebook
+				a.btn.btn-social.btn-lg.btn-linkedin.icon-customize
+					i.fa.fa-linkedin
+				a.btn.btn-social.btn-lg.btn-github.icon-customize(href="http://github.com/zhangkecyrus" target="_blank")
+					i.fa.fa-github
+				a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
+					i.fa.fa-envelope
 	hr			
 	.center-block
 		h1.fancy 
 			span VENTUS
-
-	.carousel.slide(data-ride="carousel" id="carousel1")
-		ol.carousel-indicators
-			li.active(data-target="#carousel1" data-slide-to="0")
-			li(data-target="#carousel1" data-slide-to="1")
-			li(data-target="#carousel1" data-slide-to="2")
-			li(data-target="#carousel1" data-slide-to="3")
-		.carousel-inner(role="listbox")
-			.item.active
-				img(src="images/ventus1.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus2.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus3.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus4.jpg")
-				//- .carousel-caption ...
-		a.left.carousel-control(href="#carousel1" role="button" data-slide="prev")
-			span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
-			span.sr-only Previous
-		a.right.carousel-control(href="#carousel1" role="button" data-slide="next")
-			span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
-			span.sr-only Next
+	.border
+		.carousel.slide(data-ride="carousel" id="carousel1")
+			ol.carousel-indicators
+				li.active(data-target="#carousel1" data-slide-to="0")
+				li(data-target="#carousel1" data-slide-to="1")
+				li(data-target="#carousel1" data-slide-to="2")
+				li(data-target="#carousel1" data-slide-to="3")
+			.carousel-inner(role="listbox")
+				.item.active
+					img(src="images/ventus1.jpg" style="height: 100%;")
+					//- .carousel-caption ...
+				.item
+					img(src="images/ventus2.jpg" style="height: 100%;")
+					//- .carousel-caption ...
+				.item
+					img(src="images/ventus3.jpg" style="height: 100%;")
+					//- .carousel-caption ...
+				.item
+					img(src="images/ventus4.jpg" style="height: 100%;")
+					//- .carousel-caption ...
+			a.left.carousel-control(href="#carousel1" role="button" data-slide="prev")
+				span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+				span.sr-only Previous
+			a.right.carousel-control(href="#carousel1" role="button" data-slide="next")
+				span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+				span.sr-only Next
 	hr
-	.center-block
-		h1.fancy 
-			span TS HELPER
+	//- .center-block
+	//- 	h1.fancy 
+	//- 		span TS HELPER
 
-	.carousel.slide(data-ride="carousel" id="carousel2")
-		ol.carousel-indicators
-			li.active(data-target="#carousel2" data-slide-to="0")
-			li(data-target="#carousel2" data-slide-to="1")
-			li(data-target="#carousel2" data-slide-to="2")
-			li(data-target="#carousel2" data-slide-to="3")
-		.carousel-inner(role="listbox")
-			.item.active
-				img(src="images/ventus1.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus2.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus3.jpg")
-				//- .carousel-caption ...
-			.item
-				img(src="images/ventus4.jpg")
-				//- .carousel-caption ...
-		a.left.carousel-control(href="#carousel2" role="button" data-slide="prev")
-			span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
-			span.sr-only Previous
-		a.right.carousel-control(href="#carousel2" role="button" data-slide="next")
-			span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
-			span.sr-only Next
+	//- .carousel.slide(data-ride="carousel" id="carousel2")
+	//- 	ol.carousel-indicators
+	//- 		li.active(data-target="#carousel2" data-slide-to="0")
+	//- 		li(data-target="#carousel2" data-slide-to="1")
+	//- 		li(data-target="#carousel2" data-slide-to="2")
+	//- 		li(data-target="#carousel2" data-slide-to="3")
+	//- 	.carousel-inner(role="listbox")
+	//- 		.item.active
+	//- 			img(src="images/ventus1.jpg")
+	//- 			//- .carousel-caption ...
+	//- 		.item
+	//- 			img(src="images/ventus2.jpg")
+	//- 			//- .carousel-caption ...
+	//- 		.item
+	//- 			img(src="images/ventus3.jpg")
+	//- 			//- .carousel-caption ...
+	//- 		.item
+	//- 			img(src="images/ventus4.jpg")
+	//- 			//- .carousel-caption ...
+	//- 	a.left.carousel-control(href="#carousel2" role="button" data-slide="prev")
+	//- 		span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+	//- 		span.sr-only Previous
+	//- 	a.right.carousel-control(href="#carousel2" role="button" data-slide="next")
+	//- 		span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+	//- 		span.sr-only Next
 	.foot
 		p helhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhelhel				
 block scripts
