--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,12 @@ nav a {
   margin-left: auto;
   margin-right: auto;
 }
+.icon-customize:hover, .icon-customize:hover {
+  color: blue;
+}
+.icon-customize {
+  font-size: 20px;
+}
 hr {
   width: 80%; 
   color: #987cb9;
@@ -39,7 +45,7 @@ hr {
 }
 .center-block {
   width: 50%;
-  margin-top: 100px;
+  margin-top: 80px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -91,12 +97,12 @@ hr {
 .carousel {
   width: 100%;
   margin-top: 20px;
-  min-height: 500px;
-  max-height: 500px;
   margin-bottom: 200px;
 }
 .carousel-inner .item img {
   margin:0 auto;
+  min-height: 500px;
+  max-height: 500px;
 }
 .carousel-indicators li {
   border: black;
