--- a/views/index.jade
+++ b/views/index.jade
@@ -3,23 +3,24 @@ extends layout
 block content
 	nav.navbar.navbar-fixed-top
 		.im-centered
-			a.col-md-2 idk1
-			a.col-md-2 idk2
-			a.col-md-2 idk3
-			a.col-md-2 idk4
-			a.col-md-2 idk5
-			a.col-md-2 idk6	
+			.col-md-3.col-xs-3
+				a Study Notes
+			.col-md-3.col-xs-3
+				a(href="/images/KeZhang_resume.pdf" target="_blank") CV
+			.col-md-3.col-xs-3 
+				a Life
+			.col-md-3.col-xs-3 
+				a About
 	.center-block
-		h1.fancy 
-			span ABOUT ME
+		h1 
 			.description
 				p Ke is a passionate software developer who is fueled by the idea of designing and creating.
 	.container.profile-pic
 		.row
-			.col-lg-12
+			.col-lg-12.col-xs-12
 				img(src="images/profile.jpg")
-			.col-md-8
-			.col-md-4
+			.col-md-8.col-xs-6
+			.col-md-4.col-xs-6
 				a.btn.btn-social.btn-lg.btn-facebook.icon-customize
 					i.fa.fa-facebook
 				a.btn.btn-social.btn-lg.btn-linkedin.icon-customize
@@ -39,6 +40,7 @@ block content
 				li(data-target="#carousel1" data-slide-to="1")
 				li(data-target="#carousel1" data-slide-to="2")
 				li(data-target="#carousel1" data-slide-to="3")
+				li(data-target="#carousel1" data-slide-to="4")
 			.carousel-inner(role="listbox")
 				.item.active
 					img(src="images/ventus1.jpg" style="height: 100%;")
@@ -51,6 +53,9 @@ block content
 					//- .carousel-caption ...
 				.item
 					img(src="images/ventus4.jpg" style="height: 100%;")
+					//- .carousel-caption ...
+				.item
+					img(src="images/ventus5.jpg" style="height: 100%;")
 					//- .carousel-caption ...
 			a.left.carousel-control(href="#carousel1" role="button" data-slide="prev")
 				span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
