--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html
+html(ng-app='KeApp' ng-controller='testController')
   head
     title= title
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
