one line change..

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,8 +14,7 @@ block content
 	.center-block
 		h1 
 			.description
-				//- p Ke is a passionate software developer who is fueled by the idea of designing and creating.
-				p Hello World! {{'yet' + '!'}}
+				p Ke is a passionate software developer who is fueled by the idea of designing and creating.
 	.container.profile-pic
 		.row
 			.col-lg-12.col-xs-12
