--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ block content
 				a About
 	.center-block
 		h1 
-			.description
+			.description(ng-view)
 				p Ke is a passionate software developer who is fueled by the idea of designing and creating.
 	.container.profile-pic
 		.row
