--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -13,7 +13,7 @@ block content
 				a About
 	.center-block
 		h1 
-			.description(ng-view)
+			.description
 				p Ke is a passionate software developer who is fueled by the idea of designing and creating.
 	.container.profile-pic
 		.row
@@ -29,41 +29,42 @@ block content
 					i.fa.fa-github
 				a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
 					i.fa.fa-envelope
-	hr			
-	.center-block
-		h1.fancy 
-			span VENTUS
-	.border
-		.carousel.slide(data-ride="carousel" id="carousel1")
-			ol.carousel-indicators
-				li.active(data-target="#carousel1" data-slide-to="0")
-				li(data-target="#carousel1" data-slide-to="1")
-				li(data-target="#carousel1" data-slide-to="2")
-				li(data-target="#carousel1" data-slide-to="3")
-				li(data-target="#carousel1" data-slide-to="4")
-			.carousel-inner(role="listbox")
-				.item.active
-					img(src="images/ventus1.jpg" style="height: auto; width: auto;")
-					//- .carousel-caption ...
-				.item
-					img(src="images/ventus2.jpg" style="height: 100%;")
-					//- .carousel-caption ...
-				.item
-					img(src="images/ventus3.jpg" style="height: 100%;")
-					//- .carousel-caption ...
-				.item
-					img(src="images/ventus4.jpg" style="height: 100%;")
-					//- .carousel-caption ...
-				.item
-					img(src="images/ventus5.jpg" style="height: auto; width: auto;")
-					//- .carousel-caption ...
-			a.left.carousel-control(href="#carousel1" role="button" data-slide="prev")
-				span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
-				span.sr-only Previous
-			a.right.carousel-control(href="#carousel1" role="button" data-slide="next")
-				span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
-				span.sr-only Next
 	hr
+	div(ng-view ng-controller='testController')
+		//- .center-block
+		//- 	h1.fancy 
+		//- 		span VENTUS
+		//- .border
+		//- 	.carousel.slide(data-ride="carousel" id="carousel1")
+		//- 		ol.carousel-indicators
+		//- 			li.active(data-target="#carousel1" data-slide-to="0")
+		//- 			li(data-target="#carousel1" data-slide-to="1")
+		//- 			li(data-target="#carousel1" data-slide-to="2")
+		//- 			li(data-target="#carousel1" data-slide-to="3")
+		//- 			li(data-target="#carousel1" data-slide-to="4")
+		//- 		.carousel-inner(role="listbox")
+		//- 			.item.active
+		//- 				img(src="images/ventus1.jpg" style="height: auto; width: auto;")
+		//- 				//- .carousel-caption ...
+		//- 			.item
+		//- 				img(src="images/ventus2.jpg" style="height: 100%;")
+		//- 				//- .carousel-caption ...
+		//- 			.item
+		//- 				img(src="images/ventus3.jpg" style="height: 100%;")
+		//- 				//- .carousel-caption ...
+		//- 			.item
+		//- 				img(src="images/ventus4.jpg" style="height: 100%;")
+		//- 				//- .carousel-caption ...
+		//- 			.item
+		//- 				img(src="images/ventus5.jpg" style="height: auto; width: auto;")
+		//- 				//- .carousel-caption ...
+		//- 		a.left.carousel-control(href="#carousel1" role="button" data-slide="prev")
+		//- 			span.glyphicon.glyphicon-chevron-left(aria-hidden="true")
+		//- 			span.sr-only Previous
+		//- 		a.right.carousel-control(href="#carousel1" role="button" data-slide="next")
+		//- 			span.glyphicon.glyphicon-chevron-right(aria-hidden="true")
+		//- 			span.sr-only Next
+		//- hr
 	.foot
 		p LEAVE THIS SPACE FOR FOOTER				
 block scripts
