studynote framework partial added, ready to change Carousel from Bootstrap to Bootstrap UI (angular)

--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -30,7 +30,7 @@ block content
 				a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
 					i.fa.fa-envelope
 	hr
-	div(ng-view ng-controller='testController')
+	div(ng-view)
 		//- .center-block
 		//- 	h1.fancy 
 		//- 		span VENTUS
@@ -74,11 +74,11 @@ block scripts
 	script(src='/vendor/angular-route/angular-route.min.js')
 
 	//- app
-	script(src='/javascripts/apps/_module.js')
+	script(src='/javascripts/apps/Ke-app-module.js')
 	script(src='/javascripts/apps/Ke-app.js')
 
 	//- controller
-	script(src='/javascripts/controllers/_module.js')
+	script(src='/javascripts/controllers/Ke-controller-module.js')
 	script(src='/javascripts/controllers/Ke-controller.js')
 
 	//- //- services
