--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -11,12 +11,17 @@ block content
 				a Life
 			.col-md-3.col-xs-3 
 				a About
-	.center-block			
+	.center-block
+		
+	.foot
+		p LEAVE THIS SPACE FOR FOOTER			
 block scripts
 	script(src='/vendor/freelancer/js/jquery-1.11.0.js')
 	script(src='/vendor/bootstrap/js/bootstrap.min.js')
 	script(src='/vendor/angular/angular.min.js')
 	script(src='/vendor/angular-route/angular-route.min.js')
+	script(src='/vendor/ui-bootstrap/ui-bootstrap-0.12.0.min.js')
+	script(src='/vendor/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js')
 
 	//- app
 	script(src='/javascripts/apps/_module.js')
