bootstrap --> bootstrap UI

--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -72,6 +72,8 @@ block scripts
 	script(src='/vendor/bootstrap/js/bootstrap.min.js')
 	script(src='/vendor/angular/angular.min.js')
 	script(src='/vendor/angular-route/angular-route.min.js')
+	script(src='/vendor/ui-bootstrap/ui-bootstrap-0.12.0.min.js')
+	script(src='/vendor/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js')
 
 	//- app
 	script(src='/javascripts/apps/Ke-app-module.js')
