--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -4,7 +4,7 @@ block content
 	nav.navbar.navbar-fixed-top
 		.im-centered
 			.col-md-3.col-xs-3
-				a(href="studynote") Study Notes
+				a(href="/") Back
 			.col-md-3.col-xs-3
 				a(href="/images/KeZhang_resume.pdf" target="_blank") CV
 			.col-md-3.col-xs-3 
