--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,38 @@
 body {
   /*padding: 50px;*/
+  margin: 0;
+  padding:0;
+  height:100%;
   width: 100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+.content {
+  padding-bottom:75px; /* Height of the footer element */
+}
+.foot {
+  background:#ffab62;
+  width:100%;
+  height:75px;
+  position:absolute;
+  bottom:0;
+  left:0;
+}
 .navbar {
   background-color: rgba(0,0,0,0.6);
+  transition-property: background-color;
+  transition-duration: 1s;  
   min-height: 50px;   
   padding-top: 15px;
   padding-bottom: 10px;
   width: 100%;
+
+}
+.navbar:hover{
+  background-color: #660033;
 }
 nav .im-centered {
   width: 100%;
@@ -117,9 +141,3 @@ hr {
   background-color: black;
 }
 /*END CAROUSEL CUSTOMIZE*/
-
-.foot {
-  margin-top: 100px;
-}
-  bottom: 0px;
-}
