--- a/public/stylesheets/main-style.css
+++ b/public/stylesheets/main-style.css
@@ -14,7 +14,7 @@ body {
   padding-bottom:75px; /* Height of the footer element */
 }
 .foot {
-  background:#ffab62;
+  background:#660033;
   width:100%;
   height:75px;
   position:absolute;
