--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -1,17 +1,17 @@
-extends layout
+extends main-layout
 
 block content
 	#wrapper
 		nav.navbar.navbar-fixed-top
 			.im-centered
+				.col-md-3.col-xs-3 
+					a(href="") Home
 				.col-md-3.col-xs-3
 					a(href="studynote") Study Notes
 				.col-md-3.col-xs-3
 					a(href="/images/KeZhang_resume.pdf" target="_blank") CV
 				.col-md-3.col-xs-3 
 					a Life
-				.col-md-3.col-xs-3 
-					a(href="/") About
 		.content
 			.center-block
 				h1 
@@ -35,7 +35,7 @@ block content
 			div(ng-view)
 			hr
 		.foot
-			p LEAVE THIS SPACE FOR FOOTER				
+			p(style="color:white") LEAVE THIS SPACE FOR FOOTER				
 block scripts
 	script(src='/vendor/freelancer/js/jquery-1.11.0.js')
 	script(src='/vendor/bootstrap/js/bootstrap.min.js')
