--- a/views/main-layout.jade
+++ b/views/main-layout.jade
@@ -4,7 +4,7 @@ html(ng-app='KeApp')
     title= title
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome-4.3.0/css/font-awesome.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/main-style.css')
   include includes/header
   body
     block content
