--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -1,7 +1,7 @@
 head
 	//- used by almost all pages
 	link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
-	link(rel='stylesheet', href='/stylesheets/style.css')
+	link(rel='stylesheet', href='/stylesheets/main-style.css')
 	//- link(rel='stylesheet', href='/stylesheets/dashboard.css')
 	//- uncomment this line back or find another sol used by main page (bootstrap template: http://startbootstrap.com/template-overviews/freelancer/)	
 	//- //- link(rel='stylesheet', href='/vendor/freelancer/css/freelancer.css')
