--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -22,14 +22,16 @@ block scripts
 	script(src='/vendor/angular-route/angular-route.min.js')
 	script(src='/vendor/ui-bootstrap/ui-bootstrap-0.12.0.min.js')
 	script(src='/vendor/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js')
+	script(src='/vendor/chartjs/Chart.js')
+	script(src='/vendor/angular-chart/dist/angular-chart.min.js')
 
-	//- app
-	script(src='/javascripts/apps/_module.js')
-	script(src='/javascripts/apps/Ke-app.js')
+	//- app gaigaigai
+	script(src='/javascripts/apps/Studynote-app-module.js')
+	script(src='/javascripts/apps/Studynote-app.js')
 
 	//- controller
-	script(src='/javascripts/controllers/_module.js')
-	script(src='/javascripts/controllers/Ke-controller.js')
+	script(src='/javascripts/controllers/Studynote-controller-module.js')
+	script(src='/javascripts/controllers/Studynote-controller.js')
 
 	//- //- services
 	//- script(src='/javascripts/services/_module.js')	
