--- a/views/studynote-layout.jade
+++ b/views/studynote-layout.jade
@@ -4,6 +4,7 @@ html(ng-app='StudynoteApp')
     title= title
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/font-awesome-4.3.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='/vendor/angular-chart/dist/angular-chart.css')
     link(rel='stylesheet', href='/stylesheets/studynote-style.css')
   include includes/header
   body
