--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -11,7 +11,10 @@ block content
 				a(href="/images/KeZhang_resume.pdf" target="_blank") CV
 			.col-md-3.col-xs-3 
 				a Life
-	.center-block(ng-view)
+	
+	.left-block.col-md-3
+		p.col-md-offset-9 test
+	.center-block.col-md-6(ng-view)
 		
 	//- .foot
 	//- 	p(style="color:white") LEAVE THIS SPACE FOR FOOTER			
