--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -13,8 +13,9 @@ block content
 				a Life
 	
 	.left-block.col-md-3
-		p.col-md-offset-9 test
-	.center-block.col-md-6(ng-view)
+		
+	.center-block.col-md-6
+	.right-block.col-md-3
 		
 	//- .foot
 	//- 	p(style="color:white") LEAVE THIS SPACE FOR FOOTER			
@@ -44,5 +45,8 @@ block scripts
 	//- //- services
 	//- script(src='/javascripts/services/_module.js')	
 	//- script(src='/javascripts/services/Ke-service.js')
-
+	
+	//- directives
+	script(src='/javascripts/directives/_module.js')
+	script(src='/javascripts/directives/sigPanel.js')
 
