--- a/views/partials/create.jade
+++ b/views/partials/create.jade
@@ -1,19 +1,22 @@
-canvas.col-md-12(id="demoCanvas" width="500" height="300" ng-init="init()")
-//- canvas.col-md-12(id="haha" width="500" height="300")
+//- canvas.col-md-12(id="demoCanvas" width="500" height="300" ng-init="init()")
+//- //- canvas.col-md-12(id="haha" width="500" height="300")
 
-.row
-	.col-md-2.col-md-offset-5.col-xs-2.col-xs-offset-5
-		button(ng-click="moveUp()")
-			i.pe-7s-angle-up(style="font-size: 40px;")
-.row
-	.col-md-2.col-md-offset-4.col-xs-2.col-xs-offset-4
-		button(ng-click="moveLeft()")
-			i.pe-7s-angle-left(style="font-size: 40px;")
-	.col-md-2.col-xs-2
-		button(ng-click="moveRight()")
-			i.pe-7s-angle-right(style="font-size: 40px;")
+//- .row
+//- 	.col-md-2.col-md-offset-5.col-xs-2.col-xs-offset-5
+//- 		button(ng-click="moveUp()")
+//- 			i.pe-7s-angle-up(style="font-size: 40px;")
+//- .row
+//- 	.col-md-2.col-md-offset-4.col-xs-2.col-xs-offset-4
+//- 		button(ng-click="moveLeft()")
+//- 			i.pe-7s-angle-left(style="font-size: 40px;")
+//- 	.col-md-2.col-xs-2
+//- 		button(ng-click="moveRight()")
+//- 			i.pe-7s-angle-right(style="font-size: 40px;")
 	
-.row
-	.col-md-2.col-md-offset-5.col-xs-2.col-xs-offset-5
-		button(ng-click="moveDown()")
-			i.pe-7s-angle-down(style="font-size: 40px;")
+//- .row
+//- 	.col-md-2.col-md-offset-5.col-xs-2.col-xs-offset-5
+//- 		button(ng-click="moveDown()")
+//- 			i.pe-7s-angle-down(style="font-size: 40px;")
+
+.row.row-panel
+	p Name: {{info.name}} Address: {{info.address}}
