--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -12,11 +12,11 @@ block content
 			.col-md-3.col-xs-3 
 				a Life
 	
-	.left-block.col-md-3(ng-controller="testController")
+	//- .left-block.col-md-3
+	//- .center-block.col-md-6
+	//- .right-block.col-md-3
+	.stage-block(ng-controller="testController")
 		my-customer(info="naomi")
-	.center-block.col-md-6
-	.right-block.col-md-3
-		
 	//- .foot
 	//- 	p(style="color:white") LEAVE THIS SPACE FOR FOOTER			
 block scripts
