--- a/views/partials/create.jade
+++ b/views/partials/create.jade
@@ -18,13 +18,13 @@
 //- 		button(ng-click="moveDown()")
 //- 			i.pe-7s-angle-down(style="font-size: 40px;")
 
-
 .col-lg-4.rack
 	.col-md-12
 		.rack-title.col-md-6 
 			p Name: {{info.name}}
 		.title-redundancy.col-md-6
 	.rack-body
-		p This is the content
-		p This is the content
-		p This is the content
+		.text
+			p date: 2015-07-31
+			p name: Ke Zhang
+			p event: study note
