frontend almost done

--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -15,8 +15,60 @@ block content
 	//- .left-block.col-md-3
 	//- .center-block.col-md-6
 	//- .right-block.col-md-3
-	.stage-block(ng-controller="testController")
-		my-customer(info="naomi")
+
+	//- .stage-block(ng-controller="testController")
+	//- 	my-customer(info="naomi")
+	.stage-block
+		.col-lg-4.rack
+			.col-md-12
+				.rack-title.col-md-6 
+					p Test
+				.title-redundancy.col-md-6
+			.rack-body
+				.text
+					p date: 2015-07-31
+					p name: Ke Zhang
+					p event: study note
+		.col-lg-4.rack
+			.col-md-12
+				.rack-title.col-md-6 
+					p Test
+				.title-redundancy.col-md-6
+			.rack-body
+				.text
+					p date: 2015-07-31
+					p name: Ke Zhang
+					p event: study note
+		.col-lg-4.rack
+			.col-md-12
+				.rack-title.col-md-6 
+					p Test
+				.title-redundancy.col-md-6
+			.rack-body
+				.text
+					p date: 2015-07-31
+					p name: Ke Zhang
+					p event: study note
+		.col-lg-4.rack
+			.col-md-12
+				.rack-title.col-md-6 
+					p Test
+				.title-redundancy.col-md-6
+			.rack-body
+				.text
+					p date: 2015-07-31
+					p name: Ke Zhang
+					p event: study note
+		.col-lg-4.rack
+			.col-md-12
+				.rack-title.col-md-6 
+					p Test
+				.title-redundancy.col-md-6
+			.rack-body
+				.text
+					p date: 2015-07-31
+					p name: Ke Zhang
+					p event: study note		
 	//- .foot
 	//- 	p(style="color:white") LEAVE THIS SPACE FOR FOOTER			
 block scripts
