--- a/public/stylesheets/studynote-style.css
+++ b/public/stylesheets/studynote-style.css
@@ -78,6 +78,8 @@ nav .im-centered .col-md-3 a:hover {
 }
 .rack {
   /*border-radius: 25px;*/
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .rack:hover .rack-body{
   -moz-box-shadow:    3px 3px 5px 2px #ccc;
