--- a/views/partials/create.jade
+++ b/views/partials/create.jade
@@ -23,14 +23,15 @@
 
 
 
-div(ng-repeat="i in testDS")
-	.col-lg-4.rack
-		.col-md-12
-			.rack-title.col-md-6 
-				p Name: {{info.name}}
-			.title-redundancy.col-md-6
-		.rack-body
-			.text
-				p date: 2015-07-31
-				p name: Ke Zhang
-				p event: study note
+//- div(ng-repeat="i in testDS")
+//- 	my-customer(data=)
+.col-lg-4.rack
+	.col-md-12
+		.rack-title.col-md-6 
+			p Name: {{info.name}}
+		.title-redundancy.col-md-6
+	.rack-body
+		.text
+			p date: 2015-07-31
+			p name: Ke Zhang
+			p event: study note
