--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -42,7 +42,11 @@ block scripts
 	//- controller
 	script(src='/javascripts/controllers/Studynote-controller-module.js')
 	script(src='/javascripts/controllers/Studynote-controller.js')
-	
+
+	//- services
+	script(src='/javascripts/services/Studynote-service-module.js')
+	script(src='/javascripts/services/Studynote-service.js')
+
 	//- directives
 	script(src='/javascripts/directives/Studynote-directive-module.js')
 	script(src='/javascripts/directives/Studynote-directive.js')
