--- a/views/studynote-index.jade
+++ b/views/studynote-index.jade
@@ -6,7 +6,7 @@ block content
 			.col-md-3.col-xs-3 
 				a(href="/") Home
 			.col-md-3.col-xs-3
-				a(href="studynote") Study Notes
+				a(href="") Study Notes
 			.col-md-3.col-xs-3
 				a(href="/images/KeZhang_resume.pdf" target="_blank") CV
 			.col-md-3.col-xs-3 
