--- a/views/partials/create.jade
+++ b/views/partials/create.jade
@@ -25,5 +25,5 @@
 	.rack-body
 		.text
 			p date: 2015-07-31
-			p name: Ke Zhang
-			p event: study note
+			p name: 
+				a(href="https://css-tricks.com/snippets/css/corner-ribbon/" target="_blank") Corner Ribbon
