--- a/views/main-index.jade
+++ b/views/main-index.jade
@@ -12,6 +12,7 @@ block content
 					a(href="/images/KeZhang_resume.pdf" target="_blank") CV
 				.col-md-3.col-xs-3 
 					a Life
+		.space
 		.content
 			.center-block
 				h1 
@@ -32,6 +33,7 @@ block content
 						a.btn.btn-lg.icon-customize(href="mailto:zhangkecyrus@gmail.com")
 							i.fa.fa-envelope
 			hr
+			.triangle-bottomleft
 			div(ng-view)
 			hr
 		.foot
