--- a/public/stylesheets/main-style.css
+++ b/public/stylesheets/main-style.css
@@ -1,9 +1,17 @@
+html {
+  background-color: rgba(0,0,0,0.6);
+}
+.space {
+  min-height:20%;
+  background-color: white
+}
 body {
   /*padding: 50px;*/
   margin: 0;
   padding:0;
   height:100%;
   width: 100%;
+  overflow-x: hidden;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 #wrapper {
@@ -14,7 +22,7 @@ body {
   padding-bottom:75px; /* Height of the footer element */
 }
 .foot {
-  background:#660033;
+  background:rgba(0,0,0,0.6);
   width:100%;
   height:75px;
   position:absolute;
@@ -53,6 +61,16 @@ nav .im-centered .col-md-3 a:hover {
 }
 .profile-pic {
   margin-top: 80px;
+}
+.triangle-bottomleft {
+  height: 30%;
+  /*position: fixed;*/
+  max-width: 100%;
+  z-index: 99;
+  left: 0;
+  right: 0;
+  border-bottom: 250px solid black;
+  border-right: 3000px solid transparent;
 }
 .profile-pic .row .col-lg-12 img {
   width: 20%;
